# interslavicfreq

./: LICENSE.md  MANIFEST.in  README.md  interactive_documentation.py  output.md  pyproject.toml
interslavicfreq/: __init__.py  applydiff.py  help.py  isv_phonetic_distance.py  language_info.py  preprocess.py  spellcheck_hunspell.py  synonyms.py  tokens.py  transliteration_isv.py  util.py
interslavicfreq/data/hunspell/: isv.aff
interslavicfreq/data/synonyms/: slovnik_synonyms.xlsx  synonyms.pkl  synonyms.tsv
