[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interslavicfreq"
version = "0.1.0"
authors = [
  { name="Mikhail Gorlatov", email="gorlatoff@gmail.com" },
]
description = "A library for word and text analysis for Interslavic and other Slavic languages. Forked from wordfreq."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["interslavic", "slavic", "linguistics", "wordfreq", "nlp", "zipf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "msgpack",
    "regex",
]

[project.urls]
"Homepage" = "https://github.com/gorlatoff/interslavicfreq"
"Source" = "https://github.com/gorlatoff/interslavicfreq"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Это ГАРАНТИРУЕТ включение файлов данных (частотности и словари)
"interslavicfreq" = ["data/**/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["interslavicfreq*"]